@@ -1,3 +1,7 @@
+2010-12-29 Malignant Manor <malignantmanor@users.sourceforge.net>
+	* /objs/eggs.cc: Fix SS stairs so they autoreset. Bug 3115182
+	* /mapedit/studio.cc: Fix typo that messed up -p command line.
+
 2010-12-28 Malignant Manor <malignantmanor@users.sourceforge.net>
 	* /mapedit/exult_studio.glade: Fix swapped neutral and friendly
 		alignment display in monster eggs and monster info.
